# usvfs

./: CMakeLists.txt
include/usvfs/: dllimport.h  hookcallcontext.h  hookcontext.h  hookmanager.h  inject.h  loghelpers.h  redirectiontree.h  semaphore.h  stringcast_boost.h  usvfs.h  usvfsparameters.h
include/usvfs/hooks/: cogetserverpid.h  kernel32.h  ntdll.h  ole32.h  sharedids.h
src/: hookcallcontext.cpp  hookcontext.cpp  hookmanager.cpp  inject.cpp  loghelpers.cpp  redirectiontree.cpp  semaphore.cpp  stringcast_boost.cpp  usvfs.cpp  usvfsparameters.cpp
src/hooks/: kernel32.cpp  ntdll.cpp  ole32.cpp
src/usvfs_dll/hooks/: ntdll.cpp  ntdll.h
test/: main.cpp
